force-app/main/default/objects/LT_Driver_Document__c/LT_Driver_Document__c.object-meta.xml
<CustomObject>
    <description>Documento apresentado por um motorista durante o cadastro. Detail de Motorista.</description>
    <label>Documento do Motorista</label>
    <nameField>
        <displayFormat>DOC-{00000}</displayFormat>
        <label>Codigo do Documento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentos do Motorista</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>