force-app/main/default/objects/LT_Driver_Document__c/fields/LT_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>LT_Document_Number__c</fullName>
    <description>Numero de identificacao do documento.</description>
    <label>Numero do Documento</label>
    <type>Text</type>
    <length>60</length>
</CustomField>