force-app/main/default/objects/LT_Driver_Document__c/fields/LT_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Document_Type__c</fullName>
    <description>Tipo do documento apresentado pelo motorista.</description>
    <label>Tipo de Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNH</fullName>
            </value>
            <value>
                <fullName>CPF</fullName>
            </value>
            <value>
                <fullName>Comprovante de Residencia</fullName>
            </value>
            <value>
                <fullName>Contrato MEI (CCMEI)</fullName>
            </value>
            <value>
                <fullName>Contrato de Prestacao de Servicos</fullName>
            </value>
            <value>
                <fullName>RNTRC / ANTT</fullName>
            </value>
            <value>
                <fullName>Certidao Negativa</fullName>
            </value>
            <value>
                <fullName>Curso MOPP</fullName>
            </value>
            <value>
                <fullName>Antecedentes Criminais</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>