force-app/main/default/objects/LT_Driver_Document__c/fields/LT_Driver__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver__c</fullName>
    <description>Motorista dono deste documento.</description>
    <label>Motorista</label>
    <referenceTo>LT_Driver__c</referenceTo>
    <relationshipLabel>Documentos</relationshipLabel>
    <relationshipName>LT_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>