force-app/main/default/objects/LT_Driver_Document__c/fields/LT_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Expiration_Date__c</fullName>
    <description>Data de validade do documento (deixe em branco se nao expira).</description>
    <label>Data de Validade</label>
    <type>Date</type>
</CustomField>