force-app/main/default/objects/LT_Driver_Document__c/fields/LT_File_Link__c.field-meta.xml
<CustomField>
    <fullName>LT_File_Link__c</fullName>
    <description>Link para o arquivo digitalizado do documento.</description>
    <label>Link do Arquivo</label>
    <type>Url</type>
</CustomField>