force-app/main/default/objects/LT_Driver_Document__c/fields/LT_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Issue_Date__c</fullName>
    <description>Data de emissao do documento.</description>
    <label>Data de Emissao</label>
    <type>Date</type>
</CustomField>