force-app/main/default/objects/LT_Driver_Document__c/fields/LT_Situation__c.field-meta.xml
<CustomField>
    <fullName>LT_Situation__c</fullName>
    <description>Situacao do documento conforme a data de validade.</description>
    <label>Situacao</label>
    <formula>IF(ISBLANK(LT_Expiration_Date__c), "Sem Validade", IF(LT_Expiration_Date__c &lt; TODAY(), "Vencido", IF(LT_Expiration_Date__c &lt;= TODAY() + 30, "A Vencer", "Vigente")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>