force-app/main/default/objects/LT_Driver_Document__c/fields/LT_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Verification_Date__c</fullName>
    <description>Data em que o documento foi conferido.</description>
    <label>Data da Verificacao</label>
    <type>Date</type>
</CustomField>