force-app/main/default/objects/LT_Driver_Document__c/fields/LT_Verified__c.field-meta.xml
<CustomField>
    <fullName>LT_Verified__c</fullName>
    <description>Indica se o documento foi conferido pela equipe de Cadastro.</description>
    <label>Verificado</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>