force-app/main/default/objects/LT_Driver_Document__c/fields/LT_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>LT_Verified_By__c</fullName>
    <description>Usuario da equipe de Cadastro que conferiu o documento.</description>
    <label>Verificado Por</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Documentos Verificados</relationshipLabel>
    <relationshipName>LT_Verified_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>