force-app/main/default/objects/LT_Driver_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Driver__c</columns>
    <columns>LT_Document_Type__c</columns>
    <columns>LT_Situation__c</columns>
    <columns>LT_Expiration_Date__c</columns>
    <columns>LT_Verified__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>